updates from team/ccsph2 branch